Add form validation and change CSS-rules

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,17 +1,16 @@
 :host {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(var(--columns), 74px);
+  grid-template-rows: repeat(var(--rows), 74px);
   border-radius: 20px;
-  height: 780px;
-  width: 780px;
+  //height: 780px;
+  //width: 780px;
   background: linear-gradient(180deg, #aac2ff 0%, #c81bf1 100%);
   backdrop-filter: blur(101px);
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 button {
-  margin: auto;
   display: flex;
   background: linear-gradient(
     180deg,
@@ -22,7 +21,7 @@ button {
   border-radius: 16px;
   height: 64px;
   width: 64px;
-  padding: 0;
+  margin: 10px 0px 0px 10px;
   &:hover {
     cursor: pointer;
   }
