--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,5 +1,5 @@
-@for (buttonX of buttonState(); track $index; let idx = $index) {
-  @for (buttonY of buttonX; track $index; let idy = $index) {
+@for (elem1 of buttonState(); track $index; let idx = $index) {
+  @for (elem2 of elem1; track $index; let idy = $index) {
     <button [ngClass]="checkState(idx, idy)" (click)="selectCell(idx, idy)">
       <p class="number">{{ numberPosition(idx, idy) + 1 }}</p>
     </button>
