--- a/src/app/gamefield/gamefield.component.scss
+++ b/src/app/gamefield/gamefield.component.scss
@@ -6,6 +6,13 @@
   button + button {
     margin-left: 25px;
   }
+  span {
+    margin-right: 20px;
+  }
+}
+
+app-board {
+  margin: auto;
 }
 
 .step-back {
@@ -121,7 +128,7 @@ header {
   }
 }
 
-.restart-button{
+.restart-button {
   margin-bottom: 112px;
 }
 
@@ -130,7 +137,7 @@ img {
   width: 48px;
   display: block;
   margin-right: 20px;
-  &:hover{
+  &:hover {
     cursor: pointer;
     opacity: 0.8;
   }
@@ -279,7 +286,49 @@ footer {
   }
 }
 
-input.ng-invalid.ng-touched{
+input.ng-invalid.ng-touched {
   border: 3px solid;
   border-color: red;
+}
+
+.start-dialog {
+  position: relative;
+  header {
+    span {
+      padding: 0px;
+    }
+  }
+  label + button {
+    margin-top: 40px;
+  }
+}
+
+label {
+  display: block;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 56px;
+  color: #fce7ff;
+  text-align: center;
+}
+
+input {
+  display: block;
+  margin: auto;
+  margin-bottom: 10px;
+  background-color: #fce7ff;
+}
+
+input {
+  height: 30px;
+}
+
+.choose {
+  font-size: 38px;
+  font-weight: 400;
+  line-height: 56px;
+  color: #fce7ff;
+  margin: 0px;
+  margin-bottom: 20px;
+  text-align: center;
 }
