--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,11 @@ body {
   background-image: url("./assets/background-crop.jpg");
   background-size: cover;
   overflow: hidden;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html,
 body {
   height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
