--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,26 +1,27 @@
 :host {
   display: grid;
-  grid-template-columns: repeat(var(--columns), 1fr);
-  grid-template-rows: repeat(var(--rows), 1fr);
+  grid-template-columns: repeat(var(--columns), minmax(20px, 64px));
+  grid-template-rows: repeat(var(--rows), minmax(20px, 1fr));
   border-radius: 20px;
   background: linear-gradient(180deg, #aac2ff 0%, #c81bf1 100%);
-  backdrop-filter: blur(101px);
   box-shadow: 0px 4px 4px 0px #00000040;
-  padding: 0px 10px 10px 0px;
+  padding: 10px;
+  max-width: 80vh;
+  max-height: 80vh;
+  gap: 12px;
+  //container-type: inline-size;
+  //width: 100%;
 }
 
 button {
-  display: flex;
   background: linear-gradient(
     180deg,
     #ffffff -31.99%,
     rgba(255, 255, 255, 0) 113.98%
   );
   border: none;
-  border-radius: 16px;
-  height: 64px;
-  width: 64px;
-  margin: 10px 0px 0px 10px;
+  border-radius: 25%;
+  aspect-ratio:1;
   &:hover {
     cursor: pointer;
   }
@@ -30,28 +31,40 @@ button {
   }
 }
 
+@container (min-height: 60vh){
+  .button{
+    background-color: #26ab3f;
+  }
+}
+
+@media(max-height: 500px){
+  .button{
+    background-color: #26ab3f;
+  }
+}
+
 .selected {
   pointer-events: none;
   p {
     display: flex;
-    margin: auto;
-    height: 38px;
-    width: 38px;
+    height: 2rem;
+    width: 2rem;
     border-radius: 50%;
     background: linear-gradient(220.53deg, #b2f763 0%, #26ab3f 76.95%);
-    font-size: 16px;
+    font-size: 1rem;
+    //aspect-ratio: 1;
     font-weight: 700;
     color: red;
     margin: auto;
-    line-height: 24px;
+    //line-height: 24px;
   }
 }
 
 .possible > p {
   display: flex;
   margin: auto;
-  height: 24px;
-  width: 24px;
+  height: 1rem;
+  width: 1rem;
   border-radius: 50%;
   background: linear-gradient(180deg, #ffb800 0%, #ff1f00 100%);
 }
@@ -77,16 +90,17 @@ button {
   p {
     display: flex;
     text-align: center;
-    margin: auto;
-    height: 48px;
-    width: 48px;
+    // margin: auto;
+    height: 2rem;
+    width: 2rem;
+    //aspect-ratio: 1;
     border-radius: 50%;
     background: linear-gradient(180deg, #ffb800 0%, #ff1f00 100%);
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 700;
     color: blue;
     margin: auto;
-    line-height: 27px;
+    // line-height: 27px;
   }
 }
 
