--- a/src/app/gamefield/gamefield.component.scss
+++ b/src/app/gamefield/gamefield.component.scss
@@ -1,40 +1,18 @@
-:host > div {
+.game-field-header {
   display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 72px;
-  padding: 40px 40px;
-  width: fit-content;
+  justify-content: space-between;
+  align-items: center;
+  margin:auto;
+  margin-bottom: 5px;
+  padding: 20px;
+  width: 80vw;
   border-radius: 25px;
-  border-image-source: radial-gradient(
-      0% 50% at 50% 50%,
-      #0f0f0f 0%,
-      rgba(21, 21, 21, 0) 100%
-    ),
-    radial-gradient(
-      198.89% 50% at 50% 50%,
-      #0a7abf 0%,
-      rgba(255, 255, 255, 0.7) 100%
-    ),
-    radial-gradient(
-      170.42% 50% at 50% 50%,
-      #ffffff 0%,
-      rgba(255, 255, 255, 0) 100%
-    );
   background: linear-gradient(
     111.49deg,
     rgba(255, 255, 255, 0.4) -8.95%,
     rgba(255, 255, 255, 0.01) 114%
   );
   backdrop-filter: blur(100px);
-}
-
-.game-field-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 38px;
   button + button {
     margin-left: 25px;
   }
@@ -43,8 +21,18 @@
   }
 }
 
-app-board {
-  margin: auto;
+.board {
+  margin:auto;
+  padding: 30px;
+  width: fit-content;
+  //height: fit-content;
+  border-radius: 25px;
+  background: linear-gradient(
+    111.49deg,
+    rgba(255, 255, 255, 0.4) -8.95%,
+    rgba(255, 255, 255, 0.01) 114%
+  );
+  backdrop-filter: blur(100px);
 }
 
 .step-back {
@@ -314,12 +302,10 @@ footer {
 }
 
 input.ng-invalid.ng-touched {
-  border: 3px solid;
   border-color: red;
 }
 
 .start-dialog {
-  //position: relative;
   header {
     span {
       padding: 0px;
