--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,19 +1,19 @@
 :host {
   display: grid;
-  grid-template-columns: repeat(var(--columns), minmax(20px, 64px));
-  grid-template-rows: repeat(var(--rows), minmax(20px, 1fr));
+  grid-template-rows: repeat(var(--rows),  auto);
+  grid-template-columns: repeat(var(--columns), auto);
   border-radius: 20px;
   background: linear-gradient(180deg, #aac2ff 0%, #c81bf1 100%);
   box-shadow: 0px 4px 4px 0px #00000040;
   padding: 10px;
-  max-width: 80vh;
-  max-height: 80vh;
-  gap: 12px;
-  //container-type: inline-size;
-  //width: 100%;
+  width: fit-content;
+  height:fit-content;
+  gap: 7px;
 }
 
 button {
+  display:flex;
+  justify-content: center;
   background: linear-gradient(
     180deg,
     #ffffff -31.99%,
@@ -21,7 +21,11 @@ button {
   );
   border: none;
   border-radius: 25%;
-  aspect-ratio:1;
+  max-width: 64px;
+  max-height: 64px;
+  height: calc((100vh - 200px - 7px*(var(--rows) - 1)) /(var(--rows)));
+  width: calc((100vh - 200px - 7px*(var(--rows) - 1)) /(var(--rows)));
+
   &:hover {
     cursor: pointer;
   }
@@ -31,40 +35,26 @@ button {
   }
 }
 
-@container (min-height: 60vh){
-  .button{
-    background-color: #26ab3f;
-  }
-}
-
-@media(max-height: 500px){
-  .button{
-    background-color: #26ab3f;
-  }
-}
-
 .selected {
   pointer-events: none;
   p {
     display: flex;
-    height: 2rem;
-    width: 2rem;
+    height: 62%;
+    aspect-ratio: 1;
     border-radius: 50%;
     background: linear-gradient(220.53deg, #b2f763 0%, #26ab3f 76.95%);
     font-size: 1rem;
-    //aspect-ratio: 1;
     font-weight: 700;
-    color: red;
+    color: rgb(110, 50, 165);
     margin: auto;
-    //line-height: 24px;
   }
 }
 
 .possible > p {
   display: flex;
   margin: auto;
-  height: 1rem;
-  width: 1rem;
+  height: 39%;
+  aspect-ratio: 1;
   border-radius: 50%;
   background: linear-gradient(180deg, #ffb800 0%, #ff1f00 100%);
 }
@@ -90,17 +80,14 @@ button {
   p {
     display: flex;
     text-align: center;
-    // margin: auto;
-    height: 2rem;
-    width: 2rem;
-    //aspect-ratio: 1;
+    height: 78%;
+    aspect-ratio: 1;
     border-radius: 50%;
     background: linear-gradient(180deg, #ffb800 0%, #ff1f00 100%);
     font-size: 1rem;
     font-weight: 700;
     color: blue;
     margin: auto;
-    // line-height: 27px;
   }
 }
 
